change file relative directoy

--- a/public/kanbas/assignments/edit.html
+++ b/public/kanbas/assignments/edit.html
@@ -32,9 +32,9 @@
       <tr>
         <th style="text-align: left; vertical-align: top">
           <ul style="margin-top: 0">
-            <li><a href="/public/kanbas/profile/index.html">Account</a></li>
+            <li><a href="../profile/index.html">Account</a></li>
             <li><a href="#">Dashboard</a></li>
-            <li><a href="/public/kanbas/home.html">Courses</a></li>
+            <li><a href="../home.html">Courses</a></li>
             <li><a href="#">Calendar</a></li>
             <li><a href="#">Inbox</a></li>
             <li><a href="#">History</a></li>
@@ -45,15 +45,15 @@
         </th>
         <th style="text-align: left; vertical-align: top">
           <ul style="margin-top: 0">
-            <li><a href="/public/kanbas/home.html">Home</a></li>
+            <li><a href="../home.html">Home</a></li>
             <li><a href="#">Modules</a></li>
             <li><a href="#">Piazza</a></li>
             <li><a href="#">Zoom Meetings</a></li>
             <li>
-              <a href="/public/kanbas/assignments/index.html">Assignments</a>
+              <a href="../assignments/index.html">Assignments</a>
             </li>
             <li><a href="#">Quizes</a></li>
-            <li><a href="/public/kanbas/grades.html">Grades</a></li>
+            <li><a href="../grades.html">Grades</a></li>
             <li><a href="#">People</a></li>
             <li><a href="#">Panopto Video</a></li>
             <li><a href="#">Discussions</a></li>
@@ -65,7 +65,7 @@
             <li><a href="#">Collaborations</a></li>
             <li><a href="#">Syllabus</a></li>
             <li>
-              <a href="/public/kanbas/settings/course-details.html">Settings</a>
+              <a href="../settings/course-details.html">Settings</a>
             </li>
           </ul>
         </th>
@@ -204,10 +204,10 @@ This is the assignment description
           <input type="date" id="until" value="2021-01-01" /><br />
           <br />
           <button type="button">
-            <a href="/public/kanbas/assignments/index.html">Cancel</a>
+            <a href="../assignments/index.html">Cancel</a>
           </button>
           <button type="button">
-            <a href="/public/kanbas/assignments/index.html">Save</a>
+            <a href="../assignments/index.html">Save</a>
           </button>
         </th>
       </tr>
