--- a/public/kanbas/profile/edit.html
+++ b/public/kanbas/profile/edit.html
@@ -41,9 +41,9 @@
       <tr>
         <th style="text-align: left; vertical-align: top">
           <ul style="margin-top: 0">
-            <li><a href="/public/kanbas/profile/index.html">Account</a></li>
+            <li><a href="../profile/index.html">Account</a></li>
             <li><a href="#">Dashboard</a></li>
-            <li><a href="/public/kanbas/home.html">Courses</a></li>
+            <li><a href="../home.html">Courses</a></li>
             <li><a href="#">Calendar</a></li>
             <li><a href="#">Inbox</a></li>
             <li><a href="#">History</a></li>
@@ -55,7 +55,7 @@
         <th style="text-align: left; vertical-align: top">
           <ul style="margin-top: 0">
             <li><a href="#">Notification</a></li>
-            <li><a href="/public/kanbas/profile/index.html">Profile</a></li>
+            <li><a href="../profile/index.html">Profile</a></li>
             <li><a href="#">Files</a></li>
             <li><a href="#">Settings</a></li>
             <li><a href="#">ePortfolios</a></li>
@@ -121,10 +121,10 @@ Software Engineer, Satellite QA Engineer, Shiba lover
           <br />
           <button type="button">Add another link</button><br />
           <button type="button">
-            <a href="/public/kanbas/profile/index.html">Cancel</a>
+            <a href="../profile/index.html">Cancel</a>
           </button>
           <button type="button">
-            <a href="/public/kanbas/profile/index.html">Save Profile</a></button
+            <a href="../profile/index.html">Save Profile</a></button
           ><br />
           <button type="button">Edit Profile</button>
           <button type="button">Cancel Editing</button><br />
