--- a/public/kanbas/profile/index.html
+++ b/public/kanbas/profile/index.html
@@ -32,9 +32,9 @@
       <tr>
         <th style="text-align: left; vertical-align: top">
           <ul style="margin-top: 0">
-            <li><a href="/public/kanbas/profile/index.html">Account</a></li>
+            <li><a href="../profile/index.html">Account</a></li>
             <li><a href="#">Dashboard</a></li>
-            <li><a href="/public/kanbas/home.html">Courses</a></li>
+            <li><a href="../home.html">Courses</a></li>
             <li><a href="#">Calendar</a></li>
             <li><a href="#">Inbox</a></li>
             <li><a href="#">History</a></li>
@@ -46,7 +46,7 @@
         <th style="text-align: left; vertical-align: top">
           <ul style="margin-top: 0">
             <li><a href="#">Notification</a></li>
-            <li><a href="/public/kanbas/profile/index.html">Profile</a></li>
+            <li><a href="../profile/index.html">Profile</a></li>
             <li><a href="#">Files</a></li>
             <li><a href="#">Settings</a></li>
             <li><a href="#">ePortfolios</a></li>
@@ -62,7 +62,7 @@
           <br />
           <h1>Shuang Du</h1>
           <button type="button">
-            <a href="/public/kanbas/profile/edit.html">Edit Profile</a>
+            <a href="../profile/edit.html">Edit Profile</a>
           </button>
           <h2>Contact</h2>
           <p>No registered services, you can add some on the settings page.</p>
