--- a/public/kanbas/settings/course-details.html
+++ b/public/kanbas/settings/course-details.html
@@ -32,9 +32,9 @@
       <tr>
         <th style="text-align: left; vertical-align: top">
           <ul style="margin-top: 0">
-            <li><a href="/public/kanbas/profile/index.html">Account</a></li>
+            <li><a href="../profile/index.html">Account</a></li>
             <li><a href="#">Dashboard</a></li>
-            <li><a href="/public/kanbas/home.html">Courses</a></li>
+            <li><a href="../home.html">Courses</a></li>
             <li><a href="#">Calendar</a></li>
             <li><a href="#">Inbox</a></li>
             <li><a href="#">History</a></li>
@@ -45,15 +45,15 @@
         </th>
         <th style="text-align: left; vertical-align: top">
           <ul style="margin-top: 0">
-            <li><a href="/public/kanbas/home.html">Home</a></li>
+            <li><a href="../home.html">Home</a></li>
             <li><a href="#">Modules</a></li>
             <li><a href="#">Piazza</a></li>
             <li><a href="#">Zoom Meetings</a></li>
             <li>
-              <a href="/public/kanbas/assignments/index.html">Assignments</a>
+              <a href="../assignments/index.html">Assignments</a>
             </li>
             <li><a href="#">Quizes</a></li>
-            <li><a href="/public/kanbas/grades.html">Grades</a></li>
+            <li><a href="../grades.html">Grades</a></li>
             <li><a href="#">People</a></li>
             <li><a href="#">Panopto Video</a></li>
             <li><a href="#">Discussions</a></li>
@@ -65,19 +65,17 @@
             <li><a href="#">Collaborations</a></li>
             <li><a href="#">Syllabus</a></li>
             <li>
-              <a href="/public/kanbas/settings/course-details.html">Settings</a>
+              <a href="../settings/course-details.html">Settings</a>
             </li>
           </ul>
         </th>
         <th style="text-align: left; vertical-align: top">
           <button type="button">
-            <a href="/public/kanbas/settings/course-details.html"
-              >Course Details</a
-            >
+            <a href="../settings/course-details.html">Course Details</a>
           </button>
           <button type="button"><a href="#">Sections</a></button>
           <button type="button">
-            <a href="/public/kanbas/settings/navigation.html">Navigation</a>
+            <a href="../settings/navigation.html">Navigation</a>
           </button>
           <button type="button"><a href="#">Apps</a></button>
           <button type="button"><a href="#">Feature Options</a></button>
