--- a/public/kanbas/assignments/index.html
+++ b/public/kanbas/assignments/index.html
@@ -32,9 +32,9 @@
       <tr>
         <th style="text-align: left; vertical-align: top">
           <ul style="margin-top: 0">
-            <li><a href="/public/kanbas/profile/index.html">Account</a></li>
+            <li><a href="../profile/index.html">Account</a></li>
             <li><a href="#">Dashboard</a></li>
-            <li><a href="/public/kanbas/home.html">Courses</a></li>
+            <li><a href="../home.html">Courses</a></li>
             <li><a href="#">Calendar</a></li>
             <li><a href="#">Inbox</a></li>
             <li><a href="#">History</a></li>
@@ -45,15 +45,15 @@
         </th>
         <th style="text-align: left; vertical-align: top">
           <ul style="margin-top: 0">
-            <li><a href="/public/kanbas/home.html">Home</a></li>
+            <li><a href="../home.html">Home</a></li>
             <li><a href="#">Modules</a></li>
             <li><a href="#">Piazza</a></li>
             <li><a href="#">Zoom Meetings</a></li>
             <li>
-              <a href="/public/kanbas/assignments/index.html">Assignments</a>
+              <a href="../assignments/index.html">Assignments</a>
             </li>
             <li><a href="#">Quizes</a></li>
-            <li><a href="/public/kanbas/grades.html">Grades</a></li>
+            <li><a href="../grades.html">Grades</a></li>
             <li><a href="#">People</a></li>
             <li><a href="#">Panopto Video</a></li>
             <li><a href="#">Discussions</a></li>
@@ -65,7 +65,7 @@
             <li><a href="#">Collaborations</a></li>
             <li><a href="#">Syllabus</a></li>
             <li>
-              <a href="/public/kanbas/settings/course-details.html">Settings</a>
+              <a href="../settings/course-details.html">Settings</a>
             </li>
           </ul>
         </th>
@@ -98,36 +98,40 @@
 
           <ul style="margin-top: 0">
             <li>
-              <a href="/public/kanbas/assignments/edit.html">A1 - ENV + HTML</a
+              <a href="../assignments/edit.html">A1 - ENV + HTML</a><br /><a
+                href="#"
+                >Multiple Modules</a
+              >
+              | Not available yet
+            </li>
+            <li>
+              <a href="../assignments/edit.html">A2 - CSS + BOOTSTRAP</a
               ><br /><a href="#">Multiple Modules</a>
               | Not available yet
             </li>
             <li>
-              <a href="/public/kanbas/assignments/edit.html"
-                >A2 - CSS + BOOTSTRAP</a
-              ><br /><a href="#">Multiple Modules</a>
+              <a href="../assignments/edit.html">A3 - JS + REACT</a><br /><a
+                href="#"
+                >Multiple Modules</a
+              >
               | Not available yet
             </li>
             <li>
-              <a href="/public/kanbas/assignments/edit.html">A3 - JS + REACT</a
-              ><br /><a href="#">Multiple Modules</a>
+              <a href="../assignments/edit.html">A4 - STATE + REDUX</a><br /><a
+                href="#"
+                >Multiple Modules</a
+              >
               | Not available yet
             </li>
             <li>
-              <a href="/public/kanbas/assignments/edit.html"
-                >A4 - STATE + REDUX</a
-              ><br /><a href="#">Multiple Modules</a>
+              <a href="../assignments/edit.html">A5 - NODE + SESSION</a><br /><a
+                href="#"
+                >Multiple Modules</a
+              >
               | Not available yet
             </li>
             <li>
-              <a href="/public/kanbas/assignments/edit.html"
-                >A5 - NODE + SESSION</a
-              ><br /><a href="#">Multiple Modules</a>
-              | Not available yet
-            </li>
-            <li>
-              <a href="/public/kanbas/assignments/edit.html"
-                >A6 - MONGO + MONGOOSE</a
+              <a href="../assignments/edit.html">A6 - MONGO + MONGOOSE</a
               ><br /><a href="#">Multiple Modules</a>
               | Not available yet
             </li>
