--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <div><a href="./labs/a1/index.html"> Labs </a></div>
+    <h1>CS5610 WEB DEV - SHUANG DU</h1>
+    <div><a href="./labs/a1/index.html"> Lab 1 </a></div>
     <br />
     <div><a href="./kanbas/home.html"> KANBAS </a></div>
   </body>
