a2 CSS and Bootstrap

--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,8 @@
     <h1>CS5610 WEB DEV - SHUANG DU</h1>
     <ul>
       <li><a href="./labs/a1/index.html"> Lab 1 </a></li>
-      <li><a href="./labs/a1/index.html"> Lab 2 </a></li>
-      <li><a href="./kanbas/home.html"> KANBAS </a></li>
+      <li><a href="./labs/a2/index.html"> Lab 2 </a></li>
+      <li><a href="./kanbas/courses/home.html"> KANBAS </a></li>
     </ul>
   </body>
 </html>
