--- a/public/kanbas/courses/kanbas-nav.html
+++ b/public/kanbas/courses/kanbas-nav.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kanbas-Nav-Bar</title>
+    <title>Courses-Home</title>
     <link href="../../lib/font-awesome/css/all.css" rel="stylesheet" />
     <link href="../../lib/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="../navigation-bar/navigation.css" rel="stylesheet" />
+    <link href="../courses/courses.css" rel="stylesheet" />
+    <link href="../../kanbas/navigation-bar/navigation.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <div class="wd-kanbas-navigation list-group">
-      <a href="#" class="list-group-item list-group-item-action">
-        <i class="neu-icon fab fa-neos"></i>
+    <div style="text-align: right; margin-right: 30px; margin-top: 15px">
+      <a href="./home.html" style="color: inherit"
+        ><i class="fas fa-times"></i
+      ></a>
+    </div>
+    <div class="kanbas-nav list-group">
+      <a
+        href="../dashboard/index.html"
+        class="list-group-item list-group-item-action"
+      >
+        <i class="icon fas fa-tachometer-alt"></i>
+        <p class="text">Dashboard</p>
       </a>
       <a
         href="../profile/index.html"
@@ -21,18 +32,15 @@
       >
         <i class="icon-active fas fa-user-circle"></i>
         <p class="text">Account</p>
+        <div class="float-end"><i class="fas fa-chevron-right"></i></div>
       </a>
-
       <a
-        href="../dashboard/index.html"
+        href="../courses/home.html"
         class="list-group-item list-group-item-action"
       >
-        <i class="icon fas fa-tachometer-alt"></i>
-        <p class="text">Dashboard</p>
-      </a>
-      <a href="#" class="list-group-item list-group-item-action">
         <i class="icon fas fa-book"></i>
         <p class="text">Courses</p>
+        <div class="float-end"><i class="fas fa-chevron-right"></i></div>
       </a>
       <a href="#" class="list-group-item list-group-item-action">
         <i class="icon far fa-calendar-alt"></i>
@@ -42,10 +50,7 @@
         <i class="icon fas fa-envelope-open-text"></i>
         <p class="text">Inbox</p>
       </a>
-      <a href="#" class="list-group-item list-group-item-action">
-        <i class="icon fas fa-clock"></i>
-        <p class="text">History</p>
-      </a>
+
       <a href="#" class="list-group-item list-group-item-action">
         <i class="icon fas fa-network-wired"></i>
         <p class="text">Studio</p>
@@ -55,8 +60,14 @@
         <p class="text">Commons</p>
       </a>
       <a href="#" class="list-group-item list-group-item-action">
+        <i class="icon fas fa-clock"></i>
+        <p class="text">History</p>
+        <div class="float-end"><i class="fas fa-chevron-right"></i></div>
+      </a>
+      <a href="#" class="list-group-item list-group-item-action">
         <i class="icon fas fa-question-circle"></i>
         <p class="text">Help</p>
+        <div class="float-end"><i class="fas fa-chevron-right"></i></div>
       </a>
     </div>
   </body>
