--- a/public/kanbas/navigation-bar/account-navigation.html
+++ b/public/kanbas/navigation-bar/account-navigation.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Account-Nav-Bar</title>
-  </head>
-  <body>
     <link href="../../lib/font-awesome/css/all.css" rel="stylesheet" />
     <link href="../../lib/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="../navigation-bar/navigation.css" rel="stylesheet" />
+  </head>
+  <body>
     <div class="wd-account-navigation list-group">
       <a href="#" class="list-group-item list-group-item-action">
         Notification
@@ -22,7 +22,12 @@
         Profile
       </a>
       <a href="#" class="list-group-item list-group-item-action"> Files </a>
-      <a href="#" class="list-group-item list-group-item-action"> Settings </a>
+      <a
+        href="../settings/course-details.html"
+        class="list-group-item list-group-item-action"
+      >
+        Settings
+      </a>
       <a href="#" class="list-group-item list-group-item-action">
         ePortfolios
       </a>
