--- a/public/kanbas/navigation-bar/cources-navigation.html
+++ b/public/kanbas/navigation-bar/cources-navigation.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Courses-Nav-Bar</title>
-  </head>
-  <body>
     <link href="../../lib/font-awesome/css/all.css" rel="stylesheet" />
     <link href="../../lib/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="../navigation-bar/navigation.css" rel="stylesheet" />
+  </head>
+  <body>
     <div class="wd-courses-navigation list-group">
       <a href="#" class="list-group-item list-group-item-action"> Home </a>
       <a href="#" class="list-group-item list-group-item-action"> Piazza </a>
@@ -19,13 +19,18 @@
       <a href="#" class="list-group-item list-group-item-action"> Modules </a>
       <a href="#" class="list-group-item list-group-item-action"> Quizes </a>
       <a
-        href="#"
+        href="../assignments/assignments.html"
         class="list-group-item list-group-item-action active"
         aria-current="true"
       >
         Assignments
       </a>
-      <a href="#" class="list-group-item list-group-item-action"> Grades </a>
+      <a
+        href="../grades/grades.html"
+        class="list-group-item list-group-item-action"
+      >
+        Grades
+      </a>
       <a href="#" class="list-group-item list-group-item-action"> People </a>
       <a href="#" class="list-group-item list-group-item-action">
         Microsoft Teams Meetings
